Fix nav menu not working on smaller screens

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -17,6 +17,7 @@
     align-items: center;
     z-index: 1;
     transition: 0.5s;
+    z-index: 1000;
 }
 .menuBOT li {
    list-style-type: none;
@@ -88,12 +89,14 @@
 }
 .menu input:checked ~ .menuBOT {
     right: 0;
+    z-index: 1002;
 }
 
 @media screen and (max-width: 992px) {
     .hamburguer,
     .toggle-menu {
         display: block;
+        z-index: 1004;
     }
     .header {
         padding: 0.6rem 1.2rem;
