--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
     background: var(--primary-nav-bg-color);
     padding: 0 1.2rem;
     transition: 0.3s;
-    z-index: 1000;
+    z-index: 1001;
 }
 .content {
     flex: 1;
